Changing color for simulation zone doesn't save. #107608

Closed
opened 2023-05-04 10:18:52 +02:00 by Paul · 1 comment

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon (TM) R9 390 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.10.1 31.0.12019.16007

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-03 22:09, hash: 54e397cc7830
Worked: well it didn't yet

Short description of error
Changing color for simulation nodes area is not remembered.

Exact steps for others to reproduce the error

  • Open latest alpha go to preferences->Themes->Node Editor change color for "Simulation Zone"
  • Save Preferences
  • Close blender, open it again (resets theme color)
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon (TM) R9 390 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.10.1 31.0.12019.16007 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-03 22:09, hash: `54e397cc7830` Worked: well it didn't yet **Short description of error** Changing color for simulation nodes area is not remembered. **Exact steps for others to reproduce the error** - Open latest alpha go to preferences->Themes->Node Editor change color for "Simulation Zone" - Save Preferences - Close blender, open it again (resets theme color)
Paul added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-04 10:18:53 +02:00
Member

Thanks for the report. Can confirm

Thanks for the report. Can confirm
Iliya Katushenock added the
Interest
Geometry Nodes
label 2023-05-04 14:03:59 +02:00
Philipp Oeser self-assigned this 2023-05-10 13:14:42 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-10 15:12:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107608
No description provided.