Fix #107608 : Changing color for simulation zone doesn't save

This looks like a missing version bump for 0de54b84c6f0, now added.