source/blender/blenloader/intern/versioning_userdef.c
@@ -97,6 +97,9 @@ static void do_versions_theme(const UserDef *userdef, bTheme *btheme)
     FROM_DEFAULT_V4_UCHAR(space_view3d.face_retopology);
   }
 
+  if (!USER_VERSION_ATLEAST(306, 8)) {
+    FROM_DEFAULT_V4_UCHAR(space_node.node_zone_simulation);
+  }
   /**
    * Versioning code until next subversion bump goes here.
    *
@@ -108,7 +111,6 @@ static void do_versions_theme(const UserDef *userdef, bTheme *btheme)
    */
   {
     /* Keep this block, even when empty. */
-    FROM_DEFAULT_V4_UCHAR(space_node.node_zone_simulation);
   }
 
 #undef FROM_DEFAULT_V4_UCHAR
